# MoneySaver

./: .gitignore  project.toml  pyproject.toml
src/: main.py
